// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Variant error Should render an error alert 1`] = `
.emotion-3 {
  box-sizing: border-box;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-1 {
  box-sizing: border-box;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 0.5rem;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

.emotion-4 {
  box-sizing: border-box;
  background-color: rgb(254,236,236);
  border-color: rgb(245,138,138);
  border-bottom-width: 2px;
  border-bottom-style: solid;
  padding-left: 1.25rem;
  padding-right: 1.25rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.emotion-0 {
  box-sizing: border-box;
  line-height: 0;
  display: block;
  color: rgb(226,37,37);
  width: 1.25rem;
  height: 1.25rem;
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
    role="alert"
  >
    <div
      className="emotion-3"
      display="flex"
    >
      <div
        className="emotion-1"
        display="flex"
      >
        <span
          className="emotion-0"
          color="colorTextError"
          display="block"
          size="sizeIcon20"
        >
          <svg
            aria-hidden={false}
            aria-labelledby="ErrorIcon-15"
            height="100%"
            role="img"
            viewBox="0 0 20 20"
            width="100%"
          >
            <title
              id="ErrorIcon-15"
            >
              error: 
            </title>
            <path
              d="M11.247 2.517l6.236 6.236a1.764 1.764 0 010 2.494l-6.236 6.236a1.764 1.764 0 01-2.494 0l-6.236-6.236a1.764 1.764 0 010-2.494l6.236-6.236a1.764 1.764 0 012.494 0zM10 12a1 1 0 100 2 1 1 0 000-2zm.01-5h-.02c-.604 0-1.073.592-.978 1.244l.428 2.238c.04.296.278.518.557.518h.006c.279 0 .516-.222.557-.518l.428-2.238c.095-.652-.367-1.237-.978-1.244z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
      <div
        className="emotion-2"
      >
        This is an error alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert Variant error Should render an error alert with dismiss button 1`] = `
.emotion-7 {
  box-sizing: border-box;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-4 {
  box-sizing: border-box;
  display: flex;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  opacity: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-9 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-1 {
  box-sizing: border-box;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 0.5rem;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

.emotion-6 {
  box-sizing: border-box;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-left: 1.25rem;
}

.emotion-5 {
  box-sizing: border-box;
  width: auto;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  display: inline-block;
  border: none;
  outline: none;
  -webkit-transition: none;
  transition: none;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  cursor: pointer;
  color: rgb(0,94,166);
  padding-top: 0;
  padding-right: 0;
  padding-bottom: 0;
  padding-left: 0;
  border-width: 0;
}

.emotion-5:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: rgb(0,20,137);
}

.emotion-5:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
  color: rgb(0,20,137);
}

.emotion-5:active,
.emotion-5[data-active=true] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  box-shadow: none;
  color: rgb(3,11,93);
}

.emotion-3 {
  box-sizing: border-box;
  line-height: 0;
  display: block;
  color: rgb(112,117,120);
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-8 {
  box-sizing: border-box;
  background-color: rgb(254,236,236);
  border-color: rgb(245,138,138);
  border-bottom-width: 2px;
  border-bottom-style: solid;
  padding-left: 1.25rem;
  padding-right: 1.25rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.emotion-0 {
  box-sizing: border-box;
  line-height: 0;
  display: block;
  color: rgb(226,37,37);
  width: 1.25rem;
  height: 1.25rem;
}

<div
  className="emotion-9"
>
  <div
    className="emotion-8"
    role="alert"
  >
    <div
      className="emotion-7"
      display="flex"
    >
      <div
        className="emotion-1"
        display="flex"
      >
        <span
          className="emotion-0"
          color="colorTextError"
          display="block"
          size="sizeIcon20"
        >
          <svg
            aria-hidden={false}
            aria-labelledby="ErrorIcon-16"
            height="100%"
            role="img"
            viewBox="0 0 20 20"
            width="100%"
          >
            <title
              id="ErrorIcon-16"
            >
              error: 
            </title>
            <path
              d="M11.247 2.517l6.236 6.236a1.764 1.764 0 010 2.494l-6.236 6.236a1.764 1.764 0 01-2.494 0l-6.236-6.236a1.764 1.764 0 010-2.494l6.236-6.236a1.764 1.764 0 012.494 0zM10 12a1 1 0 100 2 1 1 0 000-2zm.01-5h-.02c-.604 0-1.073.592-.978 1.244l.428 2.238c.04.296.278.518.557.518h.006c.279 0 .516-.222.557-.518l.428-2.238c.095-.652-.367-1.237-.978-1.244z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
      <div
        className="emotion-2"
      >
        This is an error alert
      </div>
      <span
        className="emotion-6"
        display="flex"
      >
        <button
          aria-busy="false"
          className="emotion-5"
          color="colorTextLink"
          cursor="pointer"
          disabled={false}
          display="inline-block"
          fontFamily="fontFamilyText"
          fontWeight="fontWeightSemibold"
          onClick={[MockFunction]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          textDecoration="none"
          type="button"
          width="auto"
        >
          <span
            aria-hidden="false"
            className="emotion-4"
            display="flex"
            opacity="1"
            textDecoration="inherit"
          >
            <span
              className="emotion-3"
              color="colorTextIcon"
              display="block"
              size="sizeIcon20"
            >
              <svg
                aria-hidden={false}
                aria-labelledby="CloseIcon-17"
                height="100%"
                role="img"
                viewBox="0 0 20 20"
                width="100%"
              >
                <title
                  id="CloseIcon-17"
                >
                  dismiss this alert
                </title>
                <path
                  d="M15.16 13.514L11.645 10l3.515-3.514a1.165 1.165 0 00-1.646-1.646L10 8.355 6.486 4.84A1.165 1.165 0 004.84 6.486L8.355 10 4.84 13.514a1.165 1.165 0 001.646 1.646L10 11.645l3.514 3.515a1.165 1.165 0 001.646-1.646z"
                  fill="currentColor"
                  fillRule="evenodd"
                />
              </svg>
            </span>
          </span>
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`Alert Variant neutral Should render a neutral alert 1`] = `
.emotion-3 {
  box-sizing: border-box;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-4 {
  box-sizing: border-box;
  background-color: rgb(235,244,255);
  border-color: rgb(2,122,197);
  border-bottom-width: 2px;
  border-bottom-style: solid;
  padding-left: 1.25rem;
  padding-right: 1.25rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.emotion-1 {
  box-sizing: border-box;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 0.5rem;
}

.emotion-0 {
  box-sizing: border-box;
  line-height: 0;
  display: block;
  color: rgb(0,62,130);
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
    role="status"
  >
    <div
      className="emotion-3"
      display="flex"
    >
      <div
        className="emotion-1"
        display="flex"
      >
        <span
          className="emotion-0"
          color="colorTextNeutral"
          display="block"
          size="sizeIcon20"
        >
          <svg
            aria-hidden={false}
            aria-labelledby="NeutralIcon-9"
            height="100%"
            role="img"
            viewBox="0 0 20 20"
            width="100%"
          >
            <title
              id="NeutralIcon-9"
            >
              information: 
            </title>
            <path
              d="M10 2a8 8 0 110 16 8 8 0 010-16zm0 7c-.26.01-.528.08-.707.24-.178.158-.292.355-.292.575v3.37c0 .21.11.428.292.577.173.14.457.247.707.237.26-.008.528-.078.707-.237.178-.16.292-.355.292-.577v-3.37a.766.766 0 00-.292-.575A1.14 1.14 0 0010 9zm0-3l-.266.036c-.17.047-.318.131-.441.253l-.156.198A.958.958 0 009 6.98v.04a.728.728 0 00.086.378c.04.121.108.227.206.315.09.094.197.163.321.202.12.06.248.09.386.084l.266-.035c.17-.047.318-.131.441-.253l.156-.198A.958.958 0 0011 7.02v-.04a.728.728 0 00-.086-.378.721.721 0 00-.206-.315.757.757 0 00-.321-.202.767.767 0 00-.386-.084z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
      <div
        className="emotion-2"
      >
        This is an alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert Variant neutral Should render a neutral alert with dismiss button 1`] = `
.emotion-7 {
  box-sizing: border-box;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-4 {
  box-sizing: border-box;
  display: flex;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  opacity: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-9 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-8 {
  box-sizing: border-box;
  background-color: rgb(235,244,255);
  border-color: rgb(2,122,197);
  border-bottom-width: 2px;
  border-bottom-style: solid;
  padding-left: 1.25rem;
  padding-right: 1.25rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.emotion-1 {
  box-sizing: border-box;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 0.5rem;
}

.emotion-0 {
  box-sizing: border-box;
  line-height: 0;
  display: block;
  color: rgb(0,62,130);
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

.emotion-6 {
  box-sizing: border-box;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-left: 1.25rem;
}

.emotion-5 {
  box-sizing: border-box;
  width: auto;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  display: inline-block;
  border: none;
  outline: none;
  -webkit-transition: none;
  transition: none;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  cursor: pointer;
  color: rgb(0,94,166);
  padding-top: 0;
  padding-right: 0;
  padding-bottom: 0;
  padding-left: 0;
  border-width: 0;
}

.emotion-5:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: rgb(0,20,137);
}

.emotion-5:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
  color: rgb(0,20,137);
}

.emotion-5:active,
.emotion-5[data-active=true] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  box-shadow: none;
  color: rgb(3,11,93);
}

.emotion-3 {
  box-sizing: border-box;
  line-height: 0;
  display: block;
  color: rgb(112,117,120);
  width: 1.25rem;
  height: 1.25rem;
}

<div
  className="emotion-9"
>
  <div
    className="emotion-8"
    role="status"
  >
    <div
      className="emotion-7"
      display="flex"
    >
      <div
        className="emotion-1"
        display="flex"
      >
        <span
          className="emotion-0"
          color="colorTextNeutral"
          display="block"
          size="sizeIcon20"
        >
          <svg
            aria-hidden={false}
            aria-labelledby="NeutralIcon-10"
            height="100%"
            role="img"
            viewBox="0 0 20 20"
            width="100%"
          >
            <title
              id="NeutralIcon-10"
            >
              information: 
            </title>
            <path
              d="M10 2a8 8 0 110 16 8 8 0 010-16zm0 7c-.26.01-.528.08-.707.24-.178.158-.292.355-.292.575v3.37c0 .21.11.428.292.577.173.14.457.247.707.237.26-.008.528-.078.707-.237.178-.16.292-.355.292-.577v-3.37a.766.766 0 00-.292-.575A1.14 1.14 0 0010 9zm0-3l-.266.036c-.17.047-.318.131-.441.253l-.156.198A.958.958 0 009 6.98v.04a.728.728 0 00.086.378c.04.121.108.227.206.315.09.094.197.163.321.202.12.06.248.09.386.084l.266-.035c.17-.047.318-.131.441-.253l.156-.198A.958.958 0 0011 7.02v-.04a.728.728 0 00-.086-.378.721.721 0 00-.206-.315.757.757 0 00-.321-.202.767.767 0 00-.386-.084z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
      <div
        className="emotion-2"
      >
        This is an alert
      </div>
      <span
        className="emotion-6"
        display="flex"
      >
        <button
          aria-busy="false"
          className="emotion-5"
          color="colorTextLink"
          cursor="pointer"
          disabled={false}
          display="inline-block"
          fontFamily="fontFamilyText"
          fontWeight="fontWeightSemibold"
          onClick={[MockFunction]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          textDecoration="none"
          type="button"
          width="auto"
        >
          <span
            aria-hidden="false"
            className="emotion-4"
            display="flex"
            opacity="1"
            textDecoration="inherit"
          >
            <span
              className="emotion-3"
              color="colorTextIcon"
              display="block"
              size="sizeIcon20"
            >
              <svg
                aria-hidden={false}
                aria-labelledby="CloseIcon-11"
                height="100%"
                role="img"
                viewBox="0 0 20 20"
                width="100%"
              >
                <title
                  id="CloseIcon-11"
                >
                  dismiss this alert
                </title>
                <path
                  d="M15.16 13.514L11.645 10l3.515-3.514a1.165 1.165 0 00-1.646-1.646L10 8.355 6.486 4.84A1.165 1.165 0 004.84 6.486L8.355 10 4.84 13.514a1.165 1.165 0 001.646 1.646L10 11.645l3.514 3.515a1.165 1.165 0 001.646-1.646z"
                  fill="currentColor"
                  fillRule="evenodd"
                />
              </svg>
            </span>
          </span>
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`Alert Variant warning Should render an warning alert 1`] = `
.emotion-3 {
  box-sizing: border-box;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-1 {
  box-sizing: border-box;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 0.5rem;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

.emotion-4 {
  box-sizing: border-box;
  background-color: rgb(254,245,238);
  border-color: rgb(255,179,122);
  border-bottom-width: 2px;
  border-bottom-style: solid;
  padding-left: 1.25rem;
  padding-right: 1.25rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.emotion-0 {
  box-sizing: border-box;
  line-height: 0;
  display: block;
  color: rgb(228,98,22);
  width: 1.25rem;
  height: 1.25rem;
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
    role="alert"
  >
    <div
      className="emotion-3"
      display="flex"
    >
      <div
        className="emotion-1"
        display="flex"
      >
        <span
          className="emotion-0"
          color="colorTextWarning"
          display="block"
          size="sizeIcon20"
        >
          <svg
            aria-hidden={false}
            aria-labelledby="WarningIcon-21"
            fill="none"
            height="100%"
            role="img"
            viewBox="0 0 20 20"
            width="100%"
          >
            <title
              id="WarningIcon-21"
            >
              warning: 
            </title>
            <path
              clipRule="evenodd"
              d="M17.798 14.791L11.316 3.744c-.582-.992-2.05-.992-2.632 0L2.202 14.79C1.625 15.776 2.354 17 3.518 17h12.964c1.164 0 1.893-1.224 1.316-2.209zM9.99 8h.02c.611.007 1.073.592.978 1.244l-.428 2.238c-.04.296-.278.518-.557.518h-.006c-.279 0-.516-.222-.557-.518l-.428-2.238C8.917 8.592 9.386 8 9.99 8zm.01 7a1 1 0 100-2 1 1 0 000 2z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
      <div
        className="emotion-2"
      >
        This is an warning alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert Variant warning Should render an warning alert with dismiss button 1`] = `
.emotion-7 {
  box-sizing: border-box;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-4 {
  box-sizing: border-box;
  display: flex;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  opacity: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-9 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-1 {
  box-sizing: border-box;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 0.5rem;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

.emotion-6 {
  box-sizing: border-box;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-left: 1.25rem;
}

.emotion-5 {
  box-sizing: border-box;
  width: auto;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  display: inline-block;
  border: none;
  outline: none;
  -webkit-transition: none;
  transition: none;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  cursor: pointer;
  color: rgb(0,94,166);
  padding-top: 0;
  padding-right: 0;
  padding-bottom: 0;
  padding-left: 0;
  border-width: 0;
}

.emotion-5:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: rgb(0,20,137);
}

.emotion-5:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
  color: rgb(0,20,137);
}

.emotion-5:active,
.emotion-5[data-active=true] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  box-shadow: none;
  color: rgb(3,11,93);
}

.emotion-3 {
  box-sizing: border-box;
  line-height: 0;
  display: block;
  color: rgb(112,117,120);
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-8 {
  box-sizing: border-box;
  background-color: rgb(254,245,238);
  border-color: rgb(255,179,122);
  border-bottom-width: 2px;
  border-bottom-style: solid;
  padding-left: 1.25rem;
  padding-right: 1.25rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.emotion-0 {
  box-sizing: border-box;
  line-height: 0;
  display: block;
  color: rgb(228,98,22);
  width: 1.25rem;
  height: 1.25rem;
}

<div
  className="emotion-9"
>
  <div
    className="emotion-8"
    role="alert"
  >
    <div
      className="emotion-7"
      display="flex"
    >
      <div
        className="emotion-1"
        display="flex"
      >
        <span
          className="emotion-0"
          color="colorTextWarning"
          display="block"
          size="sizeIcon20"
        >
          <svg
            aria-hidden={false}
            aria-labelledby="WarningIcon-22"
            fill="none"
            height="100%"
            role="img"
            viewBox="0 0 20 20"
            width="100%"
          >
            <title
              id="WarningIcon-22"
            >
              warning: 
            </title>
            <path
              clipRule="evenodd"
              d="M17.798 14.791L11.316 3.744c-.582-.992-2.05-.992-2.632 0L2.202 14.79C1.625 15.776 2.354 17 3.518 17h12.964c1.164 0 1.893-1.224 1.316-2.209zM9.99 8h.02c.611.007 1.073.592.978 1.244l-.428 2.238c-.04.296-.278.518-.557.518h-.006c-.279 0-.516-.222-.557-.518l-.428-2.238C8.917 8.592 9.386 8 9.99 8zm.01 7a1 1 0 100-2 1 1 0 000 2z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
      <div
        className="emotion-2"
      >
        This is an warning alert
      </div>
      <span
        className="emotion-6"
        display="flex"
      >
        <button
          aria-busy="false"
          className="emotion-5"
          color="colorTextLink"
          cursor="pointer"
          disabled={false}
          display="inline-block"
          fontFamily="fontFamilyText"
          fontWeight="fontWeightSemibold"
          onClick={[MockFunction]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          textDecoration="none"
          type="button"
          width="auto"
        >
          <span
            aria-hidden="false"
            className="emotion-4"
            display="flex"
            opacity="1"
            textDecoration="inherit"
          >
            <span
              className="emotion-3"
              color="colorTextIcon"
              display="block"
              size="sizeIcon20"
            >
              <svg
                aria-hidden={false}
                aria-labelledby="CloseIcon-23"
                height="100%"
                role="img"
                viewBox="0 0 20 20"
                width="100%"
              >
                <title
                  id="CloseIcon-23"
                >
                  dismiss this alert
                </title>
                <path
                  d="M15.16 13.514L11.645 10l3.515-3.514a1.165 1.165 0 00-1.646-1.646L10 8.355 6.486 4.84A1.165 1.165 0 004.84 6.486L8.355 10 4.84 13.514a1.165 1.165 0 001.646 1.646L10 11.645l3.514 3.515a1.165 1.165 0 001.646-1.646z"
                  fill="currentColor"
                  fillRule="evenodd"
                />
              </svg>
            </span>
          </span>
        </button>
      </span>
    </div>
  </div>
</div>
`;
